--- a/services/frontend/vuesite/src/assets/main.css
+++ b/services/frontend/vuesite/src/assets/main.css
@@ -1,14 +1,15 @@
-@layer theme, base, components, utilities;
+/*@layer theme, base, components, utilities;*/
 
-@import "tailwindcss/theme.css" layer(theme);
-@import "tailwindcss/preflight.css" layer(base);
+/*@import "tailwindcss/theme.css" layer(theme);*/
+/*@import "tailwindcss/preflight.css" layer(base);*/
 
-@theme {
-  /* ... */
-}
+/*@theme {*/
+/*  !* ... *!*/
+/*}*/
 
-@layer utilities {
-  #my-extension {
-    @tailwind utilities;
-  }
-}
+/*@layer utilities {*/
+/*  #my-extension {*/
+/*    @tailwind utilities;*/
+/*  }*/
+/*}*/
+/*!*a*!*/
